web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-gen-func/output.txt
[SyntaxError]: Identifier has already been declared. (1,20)
1|{ function* f() {} function f() {} }
 |                  ^
